include "structs.thrift"
include "commandResult.thrift"
namespace java com.github.geek29.geodethrift.management.service

exception CommandException {
1: string command,
2: string reason
}


service GeodeCommandService {

	commandResult.CommandResult alterDiskStore(1:structs.AlterDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult alterRegion(1:structs.AlterRegionArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult alterRuntime(1:structs.AlterRuntimeArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult backupDiskStore(1:structs.BackupDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult changeLoglevel(1:structs.ChangeLoglevelArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult clearDefinedIndexes() throws (1:CommandException cmdEx),
	commandResult.CommandResult closeDurableClient(1:structs.CloseDurableClientArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult closeDurableCq(1:structs.CloseDurableCqArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult compactDiskStore(1:structs.CompactDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult compactOfflineDiskStore(1:structs.CompactOfflineDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult configurePdx(1:structs.ConfigurePdxArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createAsyncEventQueue(1:structs.CreateAsyncEventQueueArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createDefinedIndexes(1:structs.CreateDefinedIndexesArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createDiskStore(1:structs.CreateDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createGatewayReceiver(1:structs.CreateGatewayReceiverArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createGatewaySender(1:structs.CreateGatewaySenderArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createHdfsStore(1:structs.CreateHdfsStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createIndex(1:structs.CreateIndexArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult createRegion(1:structs.CreateRegionArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult defineIndex(1:structs.DefineIndexArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult describeConfig(1:structs.DescribeConfigArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult describeDiskStore(1:structs.DescribeDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult describeMember(1:structs.DescribeMemberArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult describeOfflineDiskStore(1:structs.DescribeOfflineDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult describeRegion(1:structs.DescribeRegionArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult destroyDiskStore(1:structs.DestroyDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult destroyFunction(1:structs.DestroyFunctionArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult destroyIndex(1:structs.DestroyIndexArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult destroyRegion(1:structs.DestroyRegionArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult encryptPassword(1:structs.EncryptPasswordArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult executeFunction(1:structs.ExecuteFunctionArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult exportClusterConfiguration(1:structs.ExportClusterConfigurationArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult exportConfig(1:structs.ExportConfigArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult exportData(1:structs.ExportDataArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult exportLogs(1:structs.ExportLogsArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult exportOfflineDiskStore(1:structs.ExportOfflineDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult exportStackTraces(1:structs.ExportStackTracesArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult gc(1:structs.GcArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult get(1:structs.GetArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult help(1:structs.HelpArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult hint(1:structs.HintArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult history(1:structs.HistoryArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listAsyncEventQueues() throws (1:CommandException cmdEx),
	commandResult.CommandResult listClients() throws (1:CommandException cmdEx),
	commandResult.CommandResult listDeployed(1:structs.ListDeployedArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listDiskStores() throws (1:CommandException cmdEx),
	commandResult.CommandResult listDurableCqs(1:structs.ListDurableCqsArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listFunctions(1:structs.ListFunctionsArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listGateways(1:structs.ListGatewaysArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listIndexes(1:structs.ListIndexesArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listMembers(1:structs.ListMembersArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult listRegions(1:structs.ListRegionsArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult loadBalanceGatewaySender(1:structs.LoadBalanceGatewaySenderArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult locateEntry(1:structs.LocateEntryArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult netstat(1:structs.NetstatArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult pauseGatewaySender(1:structs.PauseGatewaySenderArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult pdxRename(1:structs.PdxRenameArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult put(1:structs.PutArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult query(1:structs.QueryArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult rebalance(1:structs.RebalanceArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult remove(1:structs.RemoveArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult resumeGatewaySender(1:structs.ResumeGatewaySenderArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult revokeMissingDiskStore(1:structs.RevokeMissingDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult setVariable(1:structs.SetVariableArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult showDeadLocks(1:structs.ShowDeadLocksArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult showLog(1:structs.ShowLogArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult showMetrics(1:structs.ShowMetricsArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult showMissingDiskStores() throws (1:CommandException cmdEx),
	commandResult.CommandResult showSubscriptionQueueSize(1:structs.ShowSubscriptionQueueSizeArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult shutdown(1:structs.ShutdownArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult statusClusterConfigService() throws (1:CommandException cmdEx),
	commandResult.CommandResult statusGatewayReceiver(1:structs.StatusGatewayReceiverArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult statusGatewaySender(1:structs.StatusGatewaySenderArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult statusLocator(1:structs.StatusLocatorArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult statusServer(1:structs.StatusServerArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult stopGatewayReceiver(1:structs.StopGatewayReceiverArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult stopGatewaySender(1:structs.StopGatewaySenderArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult stopLocator(1:structs.StopLocatorArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult stopServer(1:structs.StopServerArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult undeploy(1:structs.UndeployArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult upgradeOfflineDiskStore(1:structs.UpgradeOfflineDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult validateOfflineDiskStore(1:structs.ValidateOfflineDiskStoreArgs arguments) throws (1:CommandException cmdEx),
	commandResult.CommandResult version(1:structs.VersionArgs arguments) throws (1:CommandException cmdEx)
}
